@@ -1,7 +1,9 @@
 package com.jdum.commerce.sumysoul.service;
 
-import com.jdum.commerce.sumysoul.domain.Authority;
+import static java.util.Optional.ofNullable;
+
 import com.jdum.commerce.sumysoul.configuration.mapper.UserMapper;
+import com.jdum.commerce.sumysoul.domain.Authority;
 import com.jdum.commerce.sumysoul.domain.User;
 import com.jdum.commerce.sumysoul.dto.UserDto;
 import com.jdum.commerce.sumysoul.repository.UserRepository;
@@ -10,12 +12,10 @@ import com.jdum.commerce.sumysoul.web.error.UnauthorizedException;
 import com.jdum.commerce.sumysoul.web.error.UserExistsException;
 import java.util.EnumSet;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.ApplicationContext;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -41,15 +41,18 @@ public class UserService implements UserDetailsService {
 
   @Override
   public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-    User user = repository.findOneByLogin(username)
+    var user = repository.findOneByLogin(username)
         .orElseThrow(
-            () -> new UnauthorizedException(String.format("User %s not found", username)));
+            () -> new UnauthorizedException("User %s not found".formatted(username)));
 
-    List<SimpleGrantedAuthority> authorities = user.getAuthorities()
-        .stream()
-        .map(Enum::name)
-        .map(SimpleGrantedAuthority::new)
-        .toList();
+    var authorities =
+        ofNullable(user.getAuthorities())
+            .map(auths -> auths
+                .stream()
+                .map(Enum::name)
+                .map(SimpleGrantedAuthority::new)
+                .toList())
+            .orElse(List.of());
 
     return new org.springframework.security.core.userdetails.User(user.getLogin(),
         user.getPassword(), authorities);
